syntax = "proto3";

package io.restorecommerce.image;

message Image {
  optional string id = 1;
  optional string caption = 2;
  optional string filename = 3;
  optional string content_type = 4;
  oneof type {
    string url = 5;
    string base64 = 6;
    bytes blob = 7;
  }
  optional double width = 8;
  optional double height = 9;
  optional double length = 10;
  repeated string tags = 11;
  optional int64 index = 12;
}

message ImageList {
  repeated Image items = 1;
  optional uint32 total_count = 2;
}

message Deleted {
  optional string id = 1;
}
